[project]
name = "sorting-algorithms"
version = "0.1.0"
description = "Comprehensive collection of sorting algorithms with tracing and visualization utilities"
authors = [{name = "naviNBRuas"}]
requires-python = ">=3.9"
dependencies = [
  "matplotlib>=3.8",
  "imageio>=2.34",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
